# Vista-core-API

./: .gitignore  CMakeLists.txt  DPAdaptiveMedianBGS.h  carCounter.cpp  carCounter.h  readme.md
Vista-cmd-example/: CMakeLists.txt  main.cpp  main.h
Vista-core-API/: AdaptiveMedianBGS.cpp  CMakeLists.txt  DPAdaptiveMedianBGS.cpp  FrameDifferenceBGS.cpp  carCounter.cpp  readme.txt
