cmake_minimum_required(VERSION 2.8)
project( vista-core )
find_package( OpenCV REQUIRED )
add_library( vista-core STATIC carCounter.cpp sqlite3.c Image.cpp AdaptiveMedianBGS.cpp DPAdaptiveMedianBGS.cpp FrameDifferenceBGS.cpp)
target_link_libraries(vista-core -lm -ldl -pthread ${OpenCV_LIBS} )

install(TARGETS vista-core DESTINATION lib)
install(FILES carCounter.h sqlite3.h Image.h AdaptiveMedianBGS.h DPAdaptiveMedianBGS.h FrameDifferenceBGS.h DESTINATION include)

include(CheckCXXCompilerFlag)

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -c")
elseif(COMPILER_SUPPORTS_CXX0X)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -c")
else()
  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()
